--- a/tools/resize.yaml
+++ b/tools/resize.yaml
@@ -5,8 +5,8 @@ identity:
     en_US: "Resize"
 description:
   human:
-    en_US: "Set a pixel"
-  llm: "Set a pixel"
+    en_US: "Resize an image"
+  llm: "Resize an image"
 parameters:
   - name: image
     type: file
