--- a/tools/simple_ops.yaml
+++ b/tools/simple_ops.yaml
@@ -5,8 +5,8 @@ identity:
     en_US: "Simple OPs"
 description:
   human:
-    en_US: "Set a pixel"
-  llm: "Set a pixel"
+    en_US: "Perform simple operations"
+  llm: "Perform simple operations"
 parameters:
   - name: image
     type: file
