--- a/tools/rotate.yaml
+++ b/tools/rotate.yaml
@@ -5,8 +5,8 @@ identity:
     en_US: "Rotate"
 description:
   human:
-    en_US: "Set a pixel"
-  llm: "Set a pixel"
+    en_US: "Rotate an image"
+  llm: "Rotate an image"
 parameters:
   - name: image
     type: file
